recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:2: error: class List is abstract; cannot be instantiated
var rep = new List[Int] (l.length-1)
          ^